# icicle-bte

./: Cargo.toml  README.MD  run.sh
benches/: decrypt_all.rs  open_all.rs
examples/: endtoend.rs
src/: dealer.rs  decryption.rs  encryption.rs  icicle_utils.rs  lib.rs  main.rs  utils.rs
