[package]
name = "icicle-bte"
version = "0.1.0"
edition = "2021"
authors = ["Guru-Vamsi Policharla"]

[dependencies]
ark-poly = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }

blake3 = { version = "1.0", default-features = false }
merlin = { version = "3.0", default-features = false }
retry = { version = "2.0", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }

# icicle imports
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", branch = "main" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", branch = "main" }
icicle-bls12-381 = { git = "https://github.com/ingonyama-zk/icicle.git", branch = "main" }
rayon = "1.5"

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "partial_decryption"
harness = false

[[bench]]
name = "decrypt_all"
harness = false

[profile.dev]
opt-level = 3
